unpackaged/main/default/objects/CaseToSQRMapping__mdt/CaseToSQRMapping__mdt.object-meta.xml
<CustomObject>
    <description>Case To CORE SQR Mapping</description>
    <label>CaseToSQRMapping</label>
    <pluralLabel>CaseToSQRMappings</pluralLabel>
</CustomObject>