unpackaged/main/default/objects/CaseToSQRMapping__mdt/fields/CORE_SQR_Cause__c.field-meta.xml
<CustomField>
    <fullName>CORE_SQR_Cause__c</fullName>
    <description>CORE SQR Cause</description>
    <label>CORE SQR Cause</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>