unpackaged/main/default/objects/CaseToSQRMapping__mdt/fields/CORE_SQR_Cause_Code__c.field-meta.xml
<CustomField>
    <fullName>CORE_SQR_Cause_Code__c</fullName>
    <description>CORE SQR Cause Code</description>
    <label>CORE SQR Cause Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>