unpackaged/main/default/objects/CaseToSQRMapping__mdt/fields/CORE_SQR_LOB__c.field-meta.xml
<CustomField>
    <fullName>CORE_SQR_LOB__c</fullName>
    <description>CORE SQR LOB</description>
    <label>CORE SQR LOB</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>