unpackaged/main/default/objects/CaseToSQRMapping__mdt/fields/CORE_SQR_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>CORE_SQR_Order_Type__c</fullName>
    <description>CORE SQR Order Type</description>
    <label>CORE SQR Order Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>