unpackaged/main/default/objects/CaseToSQRMapping__mdt/fields/CORE_SQR_Service_Category__c.field-meta.xml
<CustomField>
    <fullName>CORE_SQR_Service_Category__c</fullName>
    <description>CORE SQR Service Category</description>
    <label>CORE SQR Service Category</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>