unpackaged/main/default/objects/CaseToSQRMapping__mdt/fields/CORE_SQR_Service_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>CORE_SQR_Service_Category_Code__c</fullName>
    <description>CORE SQR Service Category Code</description>
    <label>CORE SQR Service Category Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>