unpackaged/main/default/objects/CaseToSQRMapping__mdt/fields/SF_Show_Type__c.field-meta.xml
<CustomField>
    <fullName>SF_Show_Type__c</fullName>
    <description>SF Show Type</description>
    <label>SF Show Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>